small wrapping fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -485,6 +485,7 @@ body {
 .featured-lists-wrapper {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
